--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,6 @@ h3 {
     position: relative;
 }
 
-
-
 .primo-prezzo {
     color: red;
 }
@@ -60,8 +58,8 @@ h3 {
 }
 /* /BOX */
 
-/* immagini position */
-
+/* IMMAGINI POSITION */
+/* CUORE */
 .cuore {
     position: absolute;
     right: 0;
@@ -75,7 +73,8 @@ h3 {
     font-size: 20px;
     padding: 15px 15px;
 }
-
+/* /CUORE */
+/* SCONTO-QUALITA */
 .importante{
     position: absolute;
     bottom: 130px;
@@ -90,7 +89,8 @@ h3 {
     color: white;
     padding: 5px 10px;
 }
-
+/* /SCONTO-QUALITA */
+/* HOVER */
 .immagine-nascosta{
     display: none;
 }
@@ -103,3 +103,5 @@ h3 {
 .cambio-immagine:hover .immagine-nascosta{
     display: block;
 }
+/* /HOVER */
+
