--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
 
 img {
     width: 100%;
-    display: inline-block;
+    display: block;
+    padding-bottom: 5px;
 }
 
 h2 {
@@ -51,7 +52,7 @@ nav {
 }
 
 img.logo {
-    width: 200px;
+    height: 40px;
     color: #e7e7e7;
     opacity: 0.5;
 }
@@ -75,8 +76,10 @@ main {
 }
 
 .box {
-    width: 450px;
+    width: calc((100% - 40px) / 3);
     position: relative;
+    left: 0;
+    right: 0;
 }
 
 .primo-prezzo {
@@ -135,6 +138,7 @@ div.contenitore-footer a {
 .importante {
     position: absolute;
     bottom: 130px;
+    left: 0;
     color: white;
 }
 
@@ -154,26 +158,29 @@ div.contenitore-footer a {
 /* HOVER */
 
 .immagine-nascosta {
-    display: none;
+    opacity: 0;
     position: absolute;
     left: 0;
     top: 0;
+    transition: opacity 0.4s linear;
 }
 
 .cambio-immagine:hover .immagine-nascosta {
-    display: block;
+    opacity: 1;
 }
+
+
 
 .nascosta.fa-solid.fa-heart {
     display: none;
     position: absolute;
+    right: 0;
+    top: 0;
     z-index: 1;
 }
 
 .cuore:hover .nascosta.fa-solid.fa-heart {
     display: block;
-    right: 0;
-    top: 0px;
 }
 
 /* /HOVER */
